syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "FooServiceProto";

package org.example.grpc;

service FooService {
  rpc SayHello (FooRequest) returns (FooResponse) {}
}

message FooRequest {
  string content = 1;
}

message FooResponse {
  string content = 1;
}